# SFMSIM

./: .gitignore  CMakeLists.txt  README.md
include/: bundleadjustment.hh  cameramodel.hh  cmdparser.hh  framesimulator.hh  geometry.hh  global.hh  io.hh  pc_reprojectionerror.hh  pc_triangulationerror.hh  pointclassifier.hh  points.hh  sfmsimulator.hh  visualizer.hh
scripts/: genpoints.py  plot_average.py  plot_camera_accuracy.py  plot_camera_accuracy_trajectory.py  plot_trajectory_2d.py  plot_trajectory_2d_frames.py  plot_weights.py  video_trajectories.py
src/: main.cc
src/framesimulator/: framesimulator.cc
src/pointclassifier/: pc_triangulationerror.cc  pointclassifier.cc
src/sfmsimulator/: sfmsimulator.cc
src/visualizer/: visualizer.cc
tests/: testing_geometry.cc
